--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background:#ffc600;
+  background:#36B7D3;
   font-family: 'helvetica neue';
   font-weight: 200;
   font-size: 20px;
